--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Shiwei Zhou"/>
     <link rel="stylesheet" href="css/app.css">
 </head>
-<body>
+<body class="impress-not-supported" onload="prettyPrint()">
 <div id="impress">
     <div id="agenda" class="step slide" data-x="-1000" data-y="-1500">
         <h1>Agenda</h1>
@@ -21,6 +21,7 @@
     </div>
 </div>
 <script src="bower_components/impress.js/js/impress.js"></script>
+<script src="js/prettify.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
