fix style issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Naming</title>
     <meta name="description" content="Naming"/>
     <meta name="author" content="Shiwei Zhou"/>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body class="impress-not-supported" onload="prettyPrint()">
 <div id="impress">
@@ -20,8 +20,8 @@
         </ul>
     </div>
 </div>
-<script src="bower_components/impress.js/js/impress.js"></script>
-<script src="js/prettify.js"></script>
-<script src="js/app.js"></script>
+<script src="/bower_components/impress.js/js/impress.js"></script>
+<script src="/js/prettify.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
