--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Naming</title>
     <meta name="description" content="naming"/>
     <meta name="author" content="Shiwei Zhou"/>
+    <link href="css/prettify.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
 </head>
-<body class="impress-not-supported">
+<body class="impress-not-supported" onload="prettyPrint()">
 <div class="fallback-message">
     <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified
         version of this presentation.</p>
@@ -17,61 +18,108 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 <div id="impress">
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+    <div id="agenda" class="step slide" data-x="-1000" data-y="-1500">
+        <q><strong>Agenda</strong></q>
+        <ol>
+            <li><q>Why we talk about naming?</q></li>
+            <li><q>What is a good name?</q></li>
+            <li><q>How we name our stuff?</q></li>
+        </ol>
     </div>
-    <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don't you think that presentations given <strong>in modern browsers</strong> shouldn't <strong>copy the
-            limits</strong> of 'classic' slide decks?</q>
+    <div id="why" class="step slide" data-x="0" data-y="-1500">
+        <ul>
+            <li><q>Write <strong>ONCE</strong>, read and maintain <strong>MUCH MORE</strong> times</q></li>
+            <li><q>Software is the record of business knowledge, and name is building block of software.</q></li>
+        </ul>
     </div>
     <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your
-            talk?</q>
+        <q>Q: What is a good name?</q>
+        <q>A: Ask Uncle Bob!</q>
+        <img class="bob" src="images/Robert-C-Martin.jpg">
+        <img class="clean-code" src="images/cleanCode.jpg">
     </div>
-    <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-        <span class="try">then you should try</span>
-
-        <h1>impress.js<sup>*</sup></h1>
-        <span class="footnote"><sup>*</sup> no rhyme intended</span>
+    <div class="step" data-x="0" data-y="0" data-scale="4">
+        <q><strong>Use intention-revealing names</strong></q>
+        <pre class="prettyprint c#">
+            int d; //elapsed time in days
+        </pre>
+        <pre class="prettyprint c#">
+            int elapsedTimeInDays;
+        </pre>
     </div>
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>It's a <strong>presentation tool</strong> <br/>
-            inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br/>
-            and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
+    <div class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
+        <q><strong>Avoid disinformation</strong></q>
+        <ul>
+            <li><b>AccountList</b></li>
+            <li><b>AccountGroup</b></li>
+            <li><b>Accounts</b></li>
+        </ul>
     </div>
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
+    <div class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
+        <q><strong>Make meaningful distinctions</strong></q>
+        <ul>
+            <li>a1, a2, ..., aN</li>
+            <li><strong>Product</strong> vs. <strong>ProductInfo</strong> vs. <strong>ProductData</strong></li>
+        </ul>
     </div>
-    <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <p>and <b>tiny</b> ideas</p>
+    <div class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
+        <q><strong>Use pronounceable names</strong></q>
+        <pre class="prettyprint c#">
+            DateTime genymdhms;
+        </pre>
+        <pre class="prettyprint c#">
+            DateTime generationTimestamp;
+        </pre>
     </div>
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b
-                class="scaling">scaling</b> them on an infinite canvas</p>
+    <div class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
+        <q><strong>Use searchable names</strong></q>
+        <ul>
+            <li>7 vs. MAX_CLASSES_PER_STUDENT</li>
+        </ul>
     </div>
-    <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
+    <div class="step" data-x="6700" data-y="-300" data-scale="6">
+        <q><strong>Avoid Encoding</strong></q>
+        <ul>
+            <li>m_ prefix</li>
+        </ul>
     </div>
-    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
+    <div class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
+        <q><strong>Don't be cute</strong></q>
+        <ul>
+            <li>HolyHandGrenade</li>
+            <li>DeleteItems</li>
+        </ul>
     </div>
-    <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
+    <div class="step" data-x="6000" data-y="4000" data-scale="2">
+        <q><strong>Pick one word per concept</strong></q>
+        <ul>
+            <li>xxController, xxManager, xxDriver</li>
+            <li>xxBuilder, xxCreator</li>
+        </ul>
     </div>
-    <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
+    <div class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
          data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span
-                class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+        <q><strong>Use problem domain names</strong></q>
     </div>
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+    <div class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="100"
+         data-scale="2">
+        <q><strong>Use solution domain names</strong></q>
+        <ul>
+            <li>.NET naming guidance <a href="http://msdn.microsoft.com/en-us/library/ms229002(v=vs.110).aspx">http://msdn.microsoft.com/en-us/library/ms229002(v=vs.110).aspx</a></li>
+            <li>ASP.NET MVC/Web API naming convention</li>
+            <li>Design patterns</li>
+        </ul>
+    </div>
+    <div class="step" data-x="6000" data-y="5000" data-scale="2">
+        <q><strong>And finally...</strong></q>
+        <p>Keep refactoring bad names!</p>
     </div>
 </div>
 <div class="hint">
     <p>Use a spacebar or arrow keys to navigate</p>
 </div>
 <script src="js/impress.js"></script>
+<script src="js/prettify.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
